test/bad/res0.pacc
/*
nopacc 7:21 'expected NameStart:c:0'
*/

/* Results may once again appear only at the end of a sequence. */

S â† "foo" { 0 } "bar"
